--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=none
